--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=485121
 spring.jpa.properties.hibernate.default_schema=spring_recipe
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mustache.expose-request-attributes=true
