--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.default_schema=spring_recipe
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
