--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=e:/Java projects/springWebApp/uploads
