--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=485121
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_schema=spring_recipe
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
-
-spring.freemarker.expose-request-attributes=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 upload.path=e:/Java projects/springWebApp/uploads
