--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.jpa.properties.hibernate.default_schema=spring_recipe
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.initialization-mode=always
 
 upload.path=e:/Java projects/springWebApp/uploads
