--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 
 upload.path=e:/Java projects/springWebApp/uploads
+
+#Heroku
